<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="3dip"
	    android:layout_gravity="center">
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/welcome_title"
		    android:padding="20dip"
		    android:layout_gravity="center"
		    android:textSize="25sp" />
		<Button
			style="@style/buttonStyle"
			android:id="@+id/new_game_button"
			android:text="@string/new_game_label" />

		<Button
			style="@style/buttonStyle"
			android:id="@+id/options_button"
			android:text="@string/options_label" />
		<Button
			style="@style/buttonStyle"
			android:id="@+id/about_button"
			android:text="@string/about_label" />
		<Button
			style="@style/buttonStyle"	
			android:id="@+id/exit_button"
			android:text="@string/exit_label" /> 

	</LinearLayout>
</LinearLayout>