<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:paddingTop="20dip"
	  	>
		<TextView  
			android:id="@+id/word_to_translate"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/word_to_translate"
		    android:layout_gravity="left"
		    android:padding="7dip"
		    android:textSize="25sp"
		 	/>
		 <TextView  
			android:id="@+id/false_label"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/false_label"
		    android:padding="10dip"
		    android:layout_gravity="center"
		    android:textSize="15sp"
		    android:textColor="@color/red"
		    style="@style/bold"
			/>

		<LinearLayout
		  	android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
			android:layout_gravity="center_horizontal"
			>
			<Button
				android:id="@+id/answer_1_button"
				android:text="@string/answer_1_label" 
				style="@style/ingameButton" 
				/>
			<Button
				android:id="@+id/answer_2_button"
				android:text="@string/answer_2_label"
				style="@style/ingameButton" 
				/>
		</LinearLayout>
		<LinearLayout
		    android:orientation="horizontal"
    		android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:layout_gravity="center_horizontal"
		    >
			<Button
				android:id="@+id/answer_3_button"
				android:text="@string/answer_3_label"
				style="@style/ingameButton" 
				/>
			<Button
				android:id="@+id/answer_4_button"
				android:text="@string/answer_4_label"
				style="@style/ingameButton" 
				/>
		</LinearLayout>
		<Button
			android:id="@+id/stop_button"
			android:text="@string/stop_label"
			style="@style/buttonStyle"
			android:layout_marginTop="15dip" 
			/>
	</LinearLayout>
</LinearLayout>