<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="3dip"
		    android:layout_gravity="center">
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/options_title"
		    android:padding="20dip"
		    android:layout_gravity="center"
		    android:textSize="25sp" />
		   
		<Button
			android:id="@+id/update_db"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/update_db_label"
			android:padding="20dip"
			android:layout_marginBottom="10dip" />
		<Button
			android:id="@+id/reset_guessed_button"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/reset_guessed_label"
			android:padding="20dip"
			android:layout_marginBottom="10dip" />
		<Button
			android:id="@+id/reset_db"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/reset_db_label"
			android:padding="20dip"
			android:layout_marginBottom="10dip"  />
		<Button
			android:id="@+id/go_to_main_menu"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/go_to_main_menu_label"
			android:padding="20dip"
			android:layout_marginBottom="10dip"  />
	</LinearLayout>
</LinearLayout>