<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dip" android:orientation="horizontal">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:padding="10dip"
		android:orientation="vertical">
		<TextView android:id="@+id/confirm_reset_db"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/confirm_reset_db_message" />

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:padding="10dip"
			android:orientation="horizontal">
			<Button
				android:id="@+id/confirm_no"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:text="@string/confirm_no"
				android:padding="20dip"
				android:layout_marginBottom="10dip" />
			<Button android:text="@string/confirm_yes" 
				android:layout_width="100dip" 
				android:layout_height="wrap_content" 
				android:layout_marginBottom="10dip" 
				android:padding="20dip" 
				android:id="@+id/confirm_yes" /> 
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
